--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Réseau social interne de Groupomania"
     />
     <link 
-      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@100;300;400;500;700;900&family=Zilla+Slab:wght@300;400;500;600;700&display=swap" 
+      href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;500;600;700&display=swap" 
       rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Groupomania</title>
