--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,9 @@
       name="description"
       content="Réseau social interne de Groupomania"
     />
-    <link 
-      href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;500;600;700&display=swap" 
-      rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Groupomania</title>
+    <link rel="shortcut icon" type="image/ico" href="./favicon.ico">
+    
+  <title>Groupomania</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
